<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:fadingEdge="none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/title_digimind"
            android:layout_height="wrap_content"
            android:src="@drawable/logobrain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor = "@color/preguntas"
            android:text="@string/what_to_remember"
            />

        <EditText
            android:id="@+id/what_to_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textColorHint = "@color/gray"
            android:hint="@string/ph_what_to_remember"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor = "@color/preguntas"
            android:text="@string/when_to_do"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            >

            <TextView
                android:id="@+id/textoMonday"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor = "@color/black"
                android:text="@string/monday"/>
            <CheckBox
                android:id="@+id/cbMonday"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:buttonTint="@color/colorPrimary"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"/>

            <TextView
                android:id="@+id/textoTuesday"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor = "@color/black"
                android:layout_below="@id/textoMonday"
                android:text="@string/tuesday"/>
            <CheckBox
                android:id="@+id/cbTuesday"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:buttonTint="@color/colorPrimary"
                android:layout_below="@id/cbMonday"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"/>

            <TextView
                android:id="@+id/textoWednesday"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor = "@color/black"
                android:layout_below="@id/textoTuesday"
                android:text="@string/wednesday"/>
            <CheckBox
                android:id="@+id/cbWednesday"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:buttonTint="@color/colorPrimary"
                android:layout_below="@id/cbTuesday"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"/>

            <TextView
                android:id="@+id/textoThursday"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor = "@color/black"
                android:layout_below="@id/textoWednesday"
                android:text="@string/thursday"/>
            <CheckBox
                android:id="@+id/cbThursday"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:buttonTint="@color/colorPrimary"
                android:layout_below="@id/cbWednesday"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"/>

            <TextView
                android:id="@+id/textoFriday"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor = "@color/black"
                android:layout_below="@id/textoThursday"
                android:text="@string/friday"/>
            <CheckBox
                android:id="@+id/cbFriday"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:buttonTint="@color/colorPrimary"
                android:layout_below="@id/cbThursday"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"/>

            <TextView
                android:id="@+id/textoSaturday"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor = "@color/black"
                android:layout_below="@id/textoFriday"
                android:text="@string/saturday"/>
            <CheckBox
                android:id="@+id/cbSaturday"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:buttonTint="@color/colorPrimary"
                android:layout_below="@id/cbFriday"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"/>

            <TextView
                android:id="@+id/textoSunday"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor = "@color/black"
                android:layout_below="@id/textoSaturday"
                android:text="@string/sunday"/>
            <CheckBox
                android:id="@+id/cbSunday"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:buttonTint="@color/colorPrimary"
                android:layout_below="@id/cbSaturday"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"/>


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor = "@color/preguntas"
            android:text="@string/at_what_time"
            />
        <TextView
            android:id="@+id/btn_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:textColorHint = "@color/gray"
            android:hint="@string/ph_at_what_time"
            />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="DONE"
            android:textColor="#efeefe"/>
    </LinearLayout>
</ScrollView>
